# agenthub-be

./: .dockerignore  .env.dev  .env.example  .env.production  .env.staging  .gitignore  .pre-commit-config.yaml  CREDENTIALS_SUMMARY.md  DEPENDENCIES.md  DEPLOYMENT_HUGGINGFACE.md  DESKTOP_INTEGRATION_PLAN.md  Dockerfile  ENVIRONMENT_VARIABLES.md  HUGGINGFACE_AUTHENTICATION.md  HUGGINGFACE_DATABASE_SETUP.md  Makefile  PITCH_DECK.md  Procfile  QUICKSTART_HUGGINGFACE.md  README.md  README_HF.md  README_HUGGINGFACE.md  REDIS_SETUP_FOR_HUGGINGFACE.md  RENDER_ENV_SETUP.md  agenthub_setup.sh  docker-compose.yml  init-mongo.js  project_structure.sh  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  resource.txt  start.sh  test_docker.sh  test_redis_connection.py  view_hf_logs.sh
backend/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  agenthub_setup.sh  deploy_to_huggingface.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
backend/docs/: DOCUMENTATION-INDEX.md  OPTIMIZATION-SUMMARY.md  QUICK-REFERENCE-CACHE-API.md  QUICK-REFERENCE-CONFIG-CHANGES.md  README.md  TODO_PROMPT_OPTIMIZATION.md
backend/docs/api-reference/: README.md  authentication.md  chat.md  conversational-auth.md  external-services.md  health.md  ingestion.md  routes.md
backend/docs/architecture/: CACHE-ARCHITECTURE-TWO-LAYER-DESIGN.md  CACHE-INTEGRATION-COMPLETE.md  MCP-GITHUB-INTEGRATION-2026-04-09.md  OBJECT-CACHE-REGISTRATION-FIX.md  OPTIMIZATION-2026-02-25.md  PRODUCTION-GRADE-CACHING.md  PROMPT-OPTIMIZATION-2026-04-07.md  REFACTORING-2026-02-03.md  REFACTORING-2026-02-25.md  VOICE-NAVIGATION-ARCHITECTURE.md  cache-service-design-comparison.md  configuration-system.md  design-patterns.md  infrastructure-layer.md  inner-imports-vs-lazy-loading.md  overview.md
backend/docs/core-concepts/: llm-basics.md  rag-pipeline.md
backend/docs/deployment/: overview.md  render-setup.md
backend/docs/getting-started/: quick-start.md
backend/docs/guides/: multi-environment.md  redis-cache-service.md
backend/docs/tutorials/: conversational-auth.md  frontend-integration.md
backend/resources/: application-app.yaml  application-context.yaml  application-data-sources.yaml  application-data.yaml  application-db.yaml  application-external.yaml  application-llm.yaml  application-prompt.yaml  application-tools.yaml  application-vector.yaml  prompt.backup
backend/resources/tests/: application-db.yaml
backend/resources/workflows/: application-approval.yaml  application-signup.yaml
backend/scripts/: generate_requirements.sh
backend/src/app/: main.py
backend/tests/integration/: conftest.py  test_navigation_routing.py
desktop/: README.md  api_registry.py  pom.xml
docs/: CODE_COMPLIANCE_CHECKLIST.md  CONVERSATIONAL_AUTH.md  CONVERSATIONAL_AUTH_GUIDE.md  CONVERSATIONAL_SIGNUP_SUMMARY.md  DOCUMENTATION_ROADMAP.md  DOCUMENTATION_STRATEGY_SUMMARY.md  OSS_STANDARDS_VALIDATION.md  PHASE_7_SUMMARY.md  README.md
docs/api-reference/: README.md  authentication.md  chat.md  conversational-auth.md  external-services.md  health.md  ingestion.md
docs/architecture/: cache-service-design-comparison.md  configuration-system.md  design-patterns.md  inner-imports-vs-lazy-loading.md  overview.md
docs/architecture/diagrams/: error-handling-flow.puml  request-flow-sequence.puml  system-architecture.puml
docs/core-concepts/: llm-basics.md  rag-pipeline.md
docs/deployment/: overview.md  render-setup.md
docs/development-history/: EXAMPLES_REMOVAL_SUMMARY.md  PHASE_1_DAY_1_COMPLETE.md  PHASE_1_DAY_2_3_COMPLETE.md  PHASE_1_DAY_4_5_COMPLETE.md  README.md  RESILIENCE_APPLIED.md  RESILIENCE_COMPLETE.md  STEP_1_COMPLETE.md  STEP_2_COMPLETE.md  STEP_3_COMPLETE.md  STEP_3_MIGRATION_PLAN.md  STEP_4_COMPLETE.md  STEP_5_COMPLETE.md
docs/development-history/examples-archive/: README.md  configuration_usage_example.py  context_window_example.py  enhanced_llm_factory_example.py  error_format_test.py  exception_hierarchy_demo.py  migration_guide_example.py  profiles_usage_example.py  prompt_configuration_example.py  settings_convenience_example.py  structured_llm_outputs_example.py  structured_logging_demo.py  test_global_exception_handlers.py  test_migration.py
docs/getting-started/: quick-start.md
docs/guides/: multi-environment.md  redis-cache-service.md
docs/guides/agent-frameworks/: README.md
docs/guides/configuration/: README.md  resources-directory.md
docs/guides/connections/: README.md
docs/guides/database/: README.md
docs/guides/llm-providers/: azure-openai.md
docs/guides/schemas/: README.md
docs/guides/sessions/: README.md
docs/guides/tools/: DATADOG_IMPLEMENTATION.md  README.md  web-tools.md  (+6 more)
docs/tools/: DATADOG_COMPLETE_SUMMARY.md  PROMPT_UPDATE_DATADOG.md
docs/tutorials/: conversational-auth.md  frontend-integration.md
examples/: file_ingestion_example.py
frontend/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  index.html  nginx.conf  openapi.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
resources/: application-app.yaml  application-context.yaml  application-data-sources.yaml  application-db.yaml  application-embeddings.yaml  application-external.yaml  application-llm.yaml  application-prompt.yaml  application-tools.yaml  application-vector.yaml  prompt.backup  test-application-defaults.yaml
resources/workflows/: application-approval.yaml  application-signup.yaml
scripts/: generate_requirements.sh
src/: README.md
src/app/: main.py
tests/integration/: README.md  atlassian_service_test.py  conftest.py  test_api_integration.py  test_exception_migration_integration.py  test_jira_service_integration.py  test_mongodb_session_integration.py  test_natural_start_response.py  test_settings_integration.py  test_signup_session_redis_smoke.py
tests/unit/: atlassian_service_test.py  test_agent_factory.py  test_base_agent.py  test_external_services_config.py  test_llm_config.py  test_multi_environment.py
(+648 files in other folders)
