[tool.poetry]
name = "agenthub-be"
version = "0.1.0"
description = "A modular AI assistant platform that acts as a central hub for knowledge retrieval and tool integration"
authors = ["Oyejide Odofin <ai.oyejide@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.6"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
redis = "^5.0.1"
celery = "^5.3.6"
python-dotenv = "^1.0.1"
langchain = "0.3.27"
langchain-core = "0.3.72"
langchain-community = "0.3.27"
langchain-openai = "0.3.27"
pgvector = "^0.2.5"
langchain-postgres="0.0.13"
langchain-qdrant="0.1.4"
qdrant-client = "^1.8.0"
pyyaml = "^6.0.1"
docx2txt = "^0.8"
pdfminer-six = "^20231228"
unstructured = "^0.11.8"
python-magic = "^0.4.27"
pypdf = "^4.0.1"
python-docx = "^1.1.0"
openpyxl = "^3.1.2"
pytesseract = "^0.3.10"
pillow = "^10.2.0"
python-pptx = "^0.6.23"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
pdf2image = "^1.17.0"
httpx = "^0.26.0"
openai = "^1.12.0"
numpy = "^1.26.4"
tenacity = "^8.2.3"
tiktoken = "^0.7.0"
opencv-python = "^4.9.0"
pandas = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"
asyncio_mode = "auto"
